[package]
name = "rustavel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
sqlx = { version = "0.6", features = [ "mysql", "runtime-actix-rustls" ] }
async-trait = "0.1.64"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"